--- a/style.css
+++ b/style.css
@@ -200,6 +200,7 @@ h1 {
     color: var(--claro);
     border: 1px solid var(--vidro);
     outline: none;
+    resize: none;
 }
 
 .campo-form:focus {
